Add Power BI dashboard for Dubai Real Estate analysis

--- a/Dubai_RealEstate_Listings/dubai_realestate_analysis.ipynb
+++ b/Dubai_RealEstate_Listings/dubai_realestate_analysis.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "69ca86b8",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "454f801d",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0ddf37f2",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "00e7733a-4b2f-4df9-a243-771a47863e5e",
+       "ref": "ff701e0b-2de3-4a65-885d-7edde7bd34b1",
        "rows": [
         [
          "0",
@@ -388,7 +388,7 @@
        "4          Off-Plan  Q3 2029  Camelia Villas  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "a7c8cf3f",
    "metadata": {},
    "outputs": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "d3915238",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "f3102bd1",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "25d9ed1c-8aee-4a43-9a96-24dbb357f6fe",
+       "ref": "f00c5485-e817-419b-8fe4-87fb912b6e8c",
        "rows": [
         [
          "count",
@@ -737,7 +737,7 @@
        "freq                                 94  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "8d28f2ab",
    "metadata": {},
    "outputs": [
@@ -772,7 +772,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "f161d107",
    "metadata": {},
    "outputs": [
@@ -799,7 +799,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "729f73d0",
    "metadata": {},
    "outputs": [
@@ -826,7 +826,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "911606ac",
    "metadata": {},
    "outputs": [
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "id": "0284ef10",
    "metadata": {},
    "outputs": [
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "5b968e55",
    "metadata": {},
    "outputs": [
@@ -938,11 +938,10 @@
        "project_name           0\n",
        "bedrooms             769\n",
        "bathrooms              0\n",
-       "area_sqft_1            0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "bb09c7d9",
    "metadata": {},
    "outputs": [
@@ -976,11 +975,10 @@
        "project_name         0\n",
        "bedrooms             0\n",
        "bathrooms            0\n",
-       "area_sqft_1          0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "75621dca",
    "metadata": {},
    "outputs": [],
@@ -1023,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "03d2af55",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1056,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "4ab05926-a016-4864-928f-33b87b21a764",
+       "ref": "f250a596-4dd7-4244-8f92-b636177f1f3e",
        "rows": [
         [
          "0",
@@ -1175,7 +1173,7 @@
        "4     Apartment    Sale  Unfurnished          Off Plan"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "b5a4fe3a",
    "metadata": {},
    "outputs": [
@@ -1236,8 +1234,8 @@
         },
         {
          "name": "area_sqft",
-         "rawType": "object",
-         "type": "string"
+         "rawType": "float64",
+         "type": "float"
         },
         {
          "name": "country",
@@ -1295,11 +1293,6 @@
          "type": "float"
         },
         {
-         "name": "area_sqft_1",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
          "name": "handover_quarter",
          "rawType": "object",
          "type": "string"
@@ -1311,14 +1304,14 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "ae14df09-e2d6-4266-b033-8654d1b92ecb",
+       "ref": "86f8ce2e-7339-433e-9bde-e631bb2362c7",
        "rows": [
         [
          "0",
          "1800000.0",
          "3 beds",
          "4 baths",
-         "1,208 sqft",
+         "1208.0",
          "UAE",
          "Dubai",
          "DAMAC Hills 2 (Akoya by DAMAC)",
@@ -1330,7 +1323,6 @@
          "Camelia Villas",
          "3.0",
          "4.0",
-         "1208.0",
          "Q2",
          "2025"
         ],
@@ -1339,7 +1331,7 @@
          "325000.0",
          "Studio",
          "1 bath",
-         "483 sqft",
+         "483.0",
          "UAE",
          "Dubai",
          "International City",
@@ -1351,7 +1343,6 @@
          "Camelia Villas",
          "0.0",
          "1.0",
-         "483.0",
          "Q2",
          "2025"
         ],
@@ -1360,7 +1351,7 @@
          "470000.0",
          "Studio",
          "1 bath",
-         "428 sqft",
+         "428.0",
          "UAE",
          "Dubai",
          "Arjan",
@@ -1372,7 +1363,6 @@
          "Camelia Villas",
          "0.0",
          "1.0",
-         "428.0",
          "Q2",
          "2025"
         ],
@@ -1381,7 +1371,7 @@
          "1120000.0",
          "1 bed",
          "1 bath",
-         "706 sqft",
+         "706.0",
          "UAE",
          "Dubai",
          "Dubai South",
@@ -1393,7 +1383,6 @@
          "Camelia Villas",
          "1.0",
          "1.0",
-         "706.0",
          "Q3",
          "2029"
         ],
@@ -1402,7 +1391,7 @@
          "2127888.0",
          "2 beds",
          "2 baths",
-         "1,149 sqft",
+         "1149.0",
          "UAE",
          "Dubai",
          "Dubai South",
@@ -1414,13 +1403,12 @@
          "Camelia Villas",
          "2.0",
          "2.0",
-         "1149.0",
          "Q3",
          "2029"
         ]
        ],
        "shape": {
-        "columns": 18,
+        "columns": 17,
         "rows": 5
        }
       },
@@ -1458,7 +1446,6 @@
        "      <th>project_name</th>\n",
        "      <th>bedrooms</th>\n",
        "      <th>bathrooms</th>\n",
-       "      <th>area_sqft_1</th>\n",
        "      <th>handover_quarter</th>\n",
        "      <th>handover_year</th>\n",
        "    </tr>\n",
@@ -1469,7 +1456,7 @@
        "      <td>1800000.0</td>\n",
        "      <td>3 beds</td>\n",
        "      <td>4 baths</td>\n",
-       "      <td>1,208 sqft</td>\n",
+       "      <td>1208.0</td>\n",
        "      <td>UAE</td>\n",
        "      <td>Dubai</td>\n",
        "      <td>DAMAC Hills 2 (Akoya by DAMAC)</td>\n",
@@ -1481,7 +1468,6 @@
        "      <td>Camelia Villas</td>\n",
        "      <td>3.0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>1208.0</td>\n",
        "      <td>Q2</td>\n",
        "      <td>2025</td>\n",
        "    </tr>\n",
@@ -1490,7 +1476,7 @@
        "      <td>325000.0</td>\n",
        "      <td>Studio</td>\n",
        "      <td>1 bath</td>\n",
-       "      <td>483 sqft</td>\n",
+       "      <td>483.0</td>\n",
        "      <td>UAE</td>\n",
        "      <td>Dubai</td>\n",
        "      <td>International City</td>\n",
@@ -1502,7 +1488,6 @@
        "      <td>Camelia Villas</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>483.0</td>\n",
        "      <td>Q2</td>\n",
        "      <td>2025</td>\n",
        "    </tr>\n",
@@ -1511,7 +1496,7 @@
        "      <td>470000.0</td>\n",
        "      <td>Studio</td>\n",
        "      <td>1 bath</td>\n",
-       "      <td>428 sqft</td>\n",
+       "      <td>428.0</td>\n",
        "      <td>UAE</td>\n",
        "      <td>Dubai</td>\n",
        "      <td>Arjan</td>\n",
@@ -1523,7 +1508,6 @@
        "      <td>Camelia Villas</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>428.0</td>\n",
        "      <td>Q2</td>\n",
        "      <td>2025</td>\n",
        "    </tr>\n",
@@ -1532,7 +1516,7 @@
        "      <td>1120000.0</td>\n",
        "      <td>1 bed</td>\n",
        "      <td>1 bath</td>\n",
-       "      <td>706 sqft</td>\n",
+       "      <td>706.0</td>\n",
        "      <td>UAE</td>\n",
        "      <td>Dubai</td>\n",
        "      <td>Dubai South</td>\n",
@@ -1544,7 +1528,6 @@
        "      <td>Camelia Villas</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>706.0</td>\n",
        "      <td>Q3</td>\n",
        "      <td>2029</td>\n",
        "    </tr>\n",
@@ -1553,7 +1536,7 @@
        "      <td>2127888.0</td>\n",
        "      <td>2 beds</td>\n",
        "      <td>2 baths</td>\n",
-       "      <td>1,149 sqft</td>\n",
+       "      <td>1149.0</td>\n",
        "      <td>UAE</td>\n",
        "      <td>Dubai</td>\n",
        "      <td>Dubai South</td>\n",
@@ -1565,7 +1548,6 @@
        "      <td>Camelia Villas</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>1149.0</td>\n",
        "      <td>Q3</td>\n",
        "      <td>2029</td>\n",
        "    </tr>\n",
@@ -1574,12 +1556,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       price bedroom bathroom   area_sqft country   city  \\\n",
-       "0  1800000.0  3 beds  4 baths  1,208 sqft     UAE  Dubai   \n",
-       "1   325000.0  Studio   1 bath    483 sqft     UAE  Dubai   \n",
-       "2   470000.0  Studio   1 bath    428 sqft     UAE  Dubai   \n",
-       "3  1120000.0   1 bed   1 bath    706 sqft     UAE  Dubai   \n",
-       "4  2127888.0  2 beds  2 baths  1,149 sqft     UAE  Dubai   \n",
+       "       price bedroom bathroom  area_sqft country   city  \\\n",
+       "0  1800000.0  3 beds  4 baths     1208.0     UAE  Dubai   \n",
+       "1   325000.0  Studio   1 bath      483.0     UAE  Dubai   \n",
+       "2   470000.0  Studio   1 bath      428.0     UAE  Dubai   \n",
+       "3  1120000.0   1 bed   1 bath      706.0     UAE  Dubai   \n",
+       "4  2127888.0  2 beds  2 baths     1149.0     UAE  Dubai   \n",
        "\n",
        "                          address property_type purpose   furnishing  \\\n",
        "0  DAMAC Hills 2 (Akoya by DAMAC)     Townhouse    Sale  Unfurnished   \n",
@@ -1595,15 +1577,15 @@
        "3          Off Plan  Q3 2029  Camelia Villas       1.0        1.0   \n",
        "4          Off Plan  Q3 2029  Camelia Villas       2.0        2.0   \n",
        "\n",
-       "   area_sqft_1 handover_quarter handover_year  \n",
-       "0       1208.0               Q2          2025  \n",
-       "1        483.0               Q2          2025  \n",
-       "2        428.0               Q2          2025  \n",
-       "3        706.0               Q3          2029  \n",
-       "4       1149.0               Q3          2029  "
+       "  handover_quarter handover_year  \n",
+       "0               Q2          2025  \n",
+       "1               Q2          2025  \n",
+       "2               Q2          2025  \n",
+       "3               Q3          2029  \n",
+       "4               Q3          2029  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "cb0fed18",
    "metadata": {},
    "outputs": [],
@@ -1635,7 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "20ac7791",
    "metadata": {},
    "outputs": [
@@ -1655,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "be30e48c",
    "metadata": {},
    "outputs": [
@@ -1676,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "5dc2502a",
    "metadata": {},
    "outputs": [
@@ -1684,18 +1666,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           price bedroom bathroom    area_sqft country   city  \\\n",
-      "1969    330000.0  Studio   1 bath     380 sqft     UAE  Dubai   \n",
-      "2037    330000.0  Studio   1 bath     380 sqft     UAE  Dubai   \n",
-      "3375    440000.0  Studio   1 bath     475 sqft     UAE  Dubai   \n",
-      "3383    440000.0  Studio   1 bath     475 sqft     UAE  Dubai   \n",
-      "1945    475000.0  Studio   1 bath     484 sqft     UAE  Dubai   \n",
-      "...          ...     ...      ...          ...     ...    ...   \n",
-      "837   57500000.0  4 beds  5 baths   7,191 sqft     UAE  Dubai   \n",
-      "1031  57500000.0  4 beds  5 baths   7,191 sqft     UAE  Dubai   \n",
-      "1160  57500000.0  4 beds  5 baths   7,191 sqft     UAE  Dubai   \n",
-      "297   60808800.0  4 beds  6 baths  15,202 sqft     UAE  Dubai   \n",
-      "342   60808800.0  4 beds  6 baths  15,202 sqft     UAE  Dubai   \n",
+      "           price bedroom bathroom  area_sqft country   city  \\\n",
+      "1969    330000.0  Studio   1 bath      380.0     UAE  Dubai   \n",
+      "2037    330000.0  Studio   1 bath      380.0     UAE  Dubai   \n",
+      "3375    440000.0  Studio   1 bath      475.0     UAE  Dubai   \n",
+      "3383    440000.0  Studio   1 bath      475.0     UAE  Dubai   \n",
+      "1945    475000.0  Studio   1 bath      484.0     UAE  Dubai   \n",
+      "...          ...     ...      ...        ...     ...    ...   \n",
+      "837   57500000.0  4 beds  5 baths     7191.0     UAE  Dubai   \n",
+      "1031  57500000.0  4 beds  5 baths     7191.0     UAE  Dubai   \n",
+      "1160  57500000.0  4 beds  5 baths     7191.0     UAE  Dubai   \n",
+      "297   60808800.0  4 beds  6 baths    15202.0     UAE  Dubai   \n",
+      "342   60808800.0  4 beds  6 baths    15202.0     UAE  Dubai   \n",
       "\n",
       "                          address property_type purpose   furnishing  \\\n",
       "1969  Dubai Investment Park (DIP)     Apartment    Sale  Unfurnished   \n",
@@ -1723,20 +1705,20 @@
       "297           Off Plan  Q4 2026      Palm Beach Towers 3       4.0        6.0   \n",
       "342           Off Plan  Q4 2026      Palm Beach Towers 3       4.0        6.0   \n",
       "\n",
-      "      area_sqft_1 handover_quarter  handover_year  \n",
-      "1969        380.0               Q2           2026  \n",
-      "2037        380.0               Q2           2026  \n",
-      "3375        475.0               Q2           2027  \n",
-      "3383        475.0               Q2           2027  \n",
-      "1945        484.0               Q4           2025  \n",
-      "...           ...              ...            ...  \n",
-      "837        7191.0               Q4           2026  \n",
-      "1031       7191.0               Q4           2026  \n",
-      "1160       7191.0               Q4           2026  \n",
-      "297       15202.0               Q4           2026  \n",
-      "342       15202.0               Q4           2026  \n",
+      "     handover_quarter  handover_year  \n",
+      "1969               Q2           2026  \n",
+      "2037               Q2           2026  \n",
+      "3375               Q2           2027  \n",
+      "3383               Q2           2027  \n",
+      "1945               Q4           2025  \n",
+      "...               ...            ...  \n",
+      "837                Q4           2026  \n",
+      "1031               Q4           2026  \n",
+      "1160               Q4           2026  \n",
+      "297                Q4           2026  \n",
+      "342                Q4           2026  \n",
       "\n",
-      "[2696 rows x 18 columns]\n"
+      "[2696 rows x 17 columns]\n"
      ]
     }
    ],
@@ -1749,7 +1731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "a1ff7183",
    "metadata": {},
    "outputs": [],
@@ -1768,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "5c6444d0",
    "metadata": {},
    "outputs": [
@@ -1796,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "463bd42f",
    "metadata": {},
    "outputs": [
@@ -1838,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "bf613fb4",
    "metadata": {},
    "outputs": [
@@ -1879,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "id": "e8580d08",
    "metadata": {},
    "outputs": [
@@ -1921,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "1882497c",
    "metadata": {},
    "outputs": [
@@ -1954,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "86f6b410",
    "metadata": {},
    "outputs": [
